--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,3 @@
-# chenall V2.2
-
-基于[Hexo]主题[chenall V2.2](https://github.com/chenall/hexo-theme-chenall)修改而成,未在主要功能上做相关改动,仅仅增加一些小内容以及美化主题.
-
-- 独特的用户配置文件(自动加载`$SOURCE\_$THEME.yml`[默认就是**source\\_marklma.yml**]作为主题的配置文件,这样可以避免升级主题或其它原因导致的配置文件丢失).
-
-### **具体效果:** [demo] 或我的搏客 [marklma.ga] gitcafe.com/marklma里面有这两个站点的完整源码
-
-## 安装方法
-
-通过以下命令下载主题到您的theme目录，然后修改blog的_config.yml中theme为marklma。
-
-```
-git clone git://github.com/marklma/hexo-theme-marklma.git themes/marklma
-```
-或
-```
-svn co -r HEAD https://github.com/marklma/hexo-theme-marklma/trunk themes/marklma
-```
-
-## 更新
-
-```
-cd themes/marklma
-git pull 或 svn up
-```
-
-其它配置与[chenall的配置](https://github.com/chenall/hexo-theme-chenall/blob/master/README.md)基本一致。
-
-## 主题配置说明
-
-注: 配置中如果需要访问到本地路径,除非特别指定否则应该用`css/theme.css`不要写成`/css/theme.css`,前者是相对路径会自动添加config.root路径.后者是绝对路径.
-
-本主题特色: **把这个配置文件复制到`source`目录下并改名为_marklma.yml则会优先使用该配置,这样可以避免由于升级主题或其它原因导致的配置丢失.更方便使用.**
-
-默认的配置:
-
-``` yaml
 # Site default meta keywords
 #keywords: site, wide, default, keywords
 
@@ -46,7 +8,7 @@ loaded_modules:
 - fontawesome
 - prettify
 - fancybox
-\#- mathjax
+- mathjax
 
 # 注: 模块是由css或js文件来实现的,部份需要附加js代码的模块在_modules目录下.
 # 如: prettify 如果加载了prettify则会同时加载_modules\_modules.ejs
@@ -129,8 +91,8 @@ menu:
   About: about/
   Archives: archives/
   其它链接:
-    chenall: //chenall.net
-    gihtub: https://github.com/chenall/hexo-theme-chenall
+    chenall: //marklma.ga
+    gihtub: https://github.com/marklma/hexo-theme-chenall
 
 # ajax_widgets是否使用jquery.load动态加载widget的内容,
 # 注: 部份小工具,像标签,分类,最近文章等,这些工具的内容在所有页面都是一样的,这时它就支持动态加载
@@ -181,55 +143,10 @@ Beian:
 ## 使用反色的导航条(值为true时导航条的背景色是黑色)
 bs_nav_inverse: false
 
-twitter_id: chenall
+twitter_id: marklma
 facebook_id:
 linkedin_id:
-github_id: chenall/almrun
+github_id: marklma
 
 rss: atom.xml
 
-```
-
-### 其它语言支持
-
-  本主题只设置了简体中文语言文件,要使用其它语言,可以自己翻译下.以下是简体中文的语言文件例子:
-
-```yaml
-categories: 分类
-search: 搜索
-tags: 标签
-tagcloud: 标签云
-tweets: 推文
-prev: 上一页
-next: 下一页
-comment: 留言
-archive_a: 归档
-archive_b: 归档：%s
-page: 第 %d 页
-
-post:
-  updated: 最近更新
-  Tagged: 标签
-  Posted on: 发表于
-  Posted in: 归类
-  read more: 阅读全文
-
-menu:
-  Home: 主页
-  About: 关于
-  Archives: 归档
-  GuestBook: 留言板
-
-widgets:
-  category: 分类
-  recent_posts: 最近文章
-  latest_update_posts: 最近更新
-  recent_comments: 最近评论
-  sina_weiboshow: 新浪微搏秀
-  google_sidebar: 赞助商
-  tags: 标签
-  tagcloud: 标签云
-```
-[Hexo]: http://hexo.io/
-[demo]: http://hexo.chenall.net
-[chenall.net]: http://chenall.net
