--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ loaded_modules:
 - fontawesome
 - prettify
 - fancybox
-- mathjax
+#- mathjax
 
 # 注: 模块是由css或js文件来实现的,部份需要附加js代码的模块在_modules目录下.
 # 如: prettify 如果加载了prettify则会同时加载_modules\_modules.ejs
@@ -66,7 +66,7 @@ modules:
 comments:
     provider: duoshuo
     show_count: true
-    short_name: hexochenall
+    short_name: MarkLMa
 
 ## 站点分析统计代码功能组件
 # 加载在站点的footer位置
@@ -80,10 +80,10 @@ analytics:
   51la:
   # cnzz 免费统计
   cnzz:
-    siteid: 5774006  #站点ID,在获取统计代码的页面的地址栏上可以看到siteid=xxxx或从代码中提取(一般是一串数字)
+    siteid:   #站点ID,在获取统计代码的页面的地址栏上可以看到siteid=xxxx或从代码中提取(一般是一串数字)
     show: #显示样式  留空: 图片形式1; 1: 图片形式2; 2: 图片形式1; 其它值: 文字形式
   baidu: # 百度统计对应站点的hash信息，在百度统计中获取的代码中的32个字符串信息 %3F 后面的32个十六进制字符串。类似下面的
-    siteid: 1442f50724afc42380b51f097c43082c
+    siteid: 
 
 # 站点顶部菜单,支持子菜单
 menu:
@@ -92,7 +92,7 @@ menu:
   Archives: archives/
   其它链接:
     chenall: //marklma.ga
-    gihtub: https://github.com/marklma/hexo-theme-chenall
+    gihtub: https://github.com/marklma/hexo-theme-marklma
 
 # ajax_widgets是否使用jquery.load动态加载widget的内容,
 # 注: 部份小工具,像标签,分类,最近文章等,这些工具的内容在所有页面都是一样的,这时它就支持动态加载
@@ -106,17 +106,18 @@ widgets:
   header: #顶部
   footer: #底部
   sidebar: #侧边栏
-    - search
+    - swiftype
+    #- search
     - category
     - recent_posts
     - tagcloud
     - latest_update_posts
-    - random_posts
+    #- random_posts
     - sina_weiboshow
     - recent_comments
   before_content: # 文章内容前
   after_content:  # 文章内容后
-    - wumiiRelatedItems
+    #- wumiiRelatedItems
     - post_footer_info
     - ujian
 
@@ -141,7 +142,7 @@ CDN_URL: http://your.cdn.url
 Beian:
 
 ## 使用反色的导航条(值为true时导航条的背景色是黑色)
-bs_nav_inverse: false
+bs_nav_inverse: true
 
 twitter_id: marklma
 facebook_id:
