--- a/_config.yml
+++ b/_config.yml
@@ -151,3 +151,6 @@ github_id: marklma
 
 rss: atom.xml
 
+## favicon
+favicon: favicon.ico   ## size:32px*32px,`.ico` is recommended,please put image into the theme folder `/source`.     
+apple_icon: favicon.png  ## size:114px*114px,please put image into the theme folder `/source`.
